--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
 <html class="noIE" lang="en-US">
 <!--<![endif]-->
 	<head>
+    <script src="lib/angular/angular.js"></script>
+    <script src="assets/js/jquery-2.1.3.min.js"></script>
+    <script src="assets/js/jquery.actual.min.js"></script>
+    <script src="assets/js/jquery.scrollTo.min.js"></script>
+
 		<title>BarBeerDrinker Plus</title>
 
 		<!-- meta -->
@@ -34,6 +39,9 @@
 		<!--[if IE 8]>
 	    	<script src="assets/js/selectivizr.js"></script>
 	    <![endif]-->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 	</head>
 
 	<body>
@@ -65,22 +73,16 @@
 
 							      	<ul class="nav navbar-nav navbar-right">
 							        	<li>
-											<a href="#wrapper"><i class="fa fa-home"></i> Home</a>
+											<a href="/index.html"><i class="fa fa-home"></i> Home</a>
 										</li>
 										<li>
-											<a href="#about"><i class="fa fa-bookmark"></i> About</a>
+											<a href="/dashboard.html"><i class="fa fa-tachometer"></i> Manager Dashboard</a>
 										</li>
 										<li>
-											<a href="#portfolio"><i class="fa fa-bookmark"></i> Portfolio</a>
+											<a href="#friends"><i class="fa fa-users"></i> Friends</a>
 										</li>
 										<li>
-											<a href="#services"><i class="fa fa-tasks"></i> Service</a>
-										</li>
-										<li>
-											<a href="#blog"><i class="fa fa-wordpress"></i> Blog</a>
-										</li>
-										<li>
-											<a href="#testimonials"><i class="fa fa-thumbs-up"></i> Testimonial</a>
+											<a href="#account"><i class="fa fa-cog"></i> Account</a>
 										</li>
 							      	</ul>
 							    </div><!-- /navbar-collapse -->
@@ -99,243 +101,80 @@
           <div class="col-lg-3">
           </div>
 
-          <div class="col-lg-6">
-            <div class="input-group">
-              <span class="fa fa-search"></span>
-              <input id="mainSearchBar" type="text" class="form-control form-rounded" placeholder="Search for something...">
-            </div>
+          <div class="col-lg-6" id="searchBarsHover">
+            <form id="mainSearchForm" href="searchResults">
+              <input id="mainSearchBar" type="text" class="form-control" placeholder="Search for something...">
+              <input id="mainSearchBar2" type="text" class="form-control" placeholder="Near this...">
+              <input type="submit" hidden="true">
+            </form>
           </div>
-
-          <div class="col-lg-3"></div>
+          <div ng-app="">
+            <p>Name : <input type="text" ng-model="name"></p>
+            <h1>Hello {{name}}</h1>
+          </div>
+          <div class="col-lg-3">
+          </div>
 				</section>
 			</div><!-- header -->
 
-			<!-- About us -->
-	        <div id="about" class="about-us">
-	            <div class="container about-sec">
-	                <header class="block-heading cleafix">
-							<div class="title-page">
-								<p class="main-header">About us</p>
-							    <p class="sub-header">Make sure you know about us</p>
-							</div>
-						</header>
-	                <div class="divide50"></div>
-	                <div class="row">
-	                    <div class="col-md-4 text-center">
-	                        <div class="aboutus-item">
-	                            <i class="aboutus-icon fa fa-plane"></i>
-	                            <h4 class="aboutus-title">Great Transport</h4>
-	                            <p class="aboutus-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptatum et, alias vero, reprehenderit doloremque neque dignissimos voluptas.</p>
-	                        </div>
-	                    </div>
-	                    <div class="col-md-4 text-center">
-	                        <div class="aboutus-item">
-	                            <i class="aboutus-icon fa fa-usd"></i>
-	                            <h4 class="aboutus-title">Not Expensive</h4>
-	                            <p class="aboutus-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptatum et, alias vero, reprehenderit doloremque neque dignissimos voluptas.</p>
-	                        </div>
-	                    </div>
-	                    <div class="col-md-4 text-center">
-	                        <div class="aboutus-item">
-	                            <i class="aboutus-icon fa fa-cutlery"></i>
-	                            <h4 class="aboutus-title">Delicious Food</h4>
-	                            <p class="aboutus-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni voluptatum et, alias vero, reprehenderit doloremque neque dignissimos voluptas.</p>
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	        <!-- /About us -->
-
-			<div class="content-block" id="portfolio">
-				<div class="container portfolio-sec">
-					<header class="block-heading cleafix">
-						<a href="#" class="btn btn-o btn-lg pull-right">View All</a>
-						<div class="title-page">
-							<p class="main-header">Our Latest Works </p>
-						    <p class="sub-header">Take a look at some of our recent products</p>
-					    </div>
-					</header>
-					<section class="block-body">
-						<div class="row">
-							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/rain_1-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
-								</a>
-							</div>
-							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/min_icons_thumb1-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
-								</a>
-							</div>
-							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/flat_icons_thumb.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
-								</a>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/wood-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
-								</a>
-							</div>
-							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/bike-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
-								</a>
-							</div>
-							<div class="col-sm-4">
-								<a href="#" class="recent-work" style="background-image:url(assets/images/six_1-320x240.jpg)">
-									<span class="btn btn-o-white">Lorem Rocks</span>
-								</a>
-							</div>
-						</div>
-					</section>
-				</div>
-			</div><!-- #portfolio -->
-
-			<div class="content-block parallax" id="services">
-				<div class="container services-sec">
-					<div class="title-page">
-						<p class="main-header">Our Services </p>
-					    <p class="sub-header">A little about what we do</p>
-					</div>
-					<section class="block-body">
-						<div class="row">
-							<div class="col-md-4">
-								<div class="service">
-									<div class="bar">
-										<i class="fa fa-send-o"></i>
-									</div>
-									<h2 class="service-head">Illustration</h2>
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="service">
-									<div class="bar">
-										<i class="fa fa-heart-o"></i>
-									</div>
-									<h2 class="service-head">3D Modeling</h2>
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								</div>
-							</div>
-							<div class="col-md-4">
-								<div class="service">
-									<div class="bar">
-										<i class="fa fa-camera-retro"></i>
-									</div>
-									<h2 class="service-head">Photography</h2>
-									<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								</div>
-							</div>
-						</div>
-					</section>
-				</div>
-			</div><!-- #services -->
+      <div class="content-block" id="searchResults">
+        <section class="center">
+          <h3 align="center"> Here's what we found!</h3>
+          <p align="center">Showing 1-2 of 69 results</p>
+        </section>
+        <br>
+        <br>
+        <div class="barListing">
 
 
-			<div class="content-block" id="blog">
-				<div class="container blog-sec">
-					<header class="block-heading cleafix">
-						<a href="#" class="btn btn-o btn-lg pull-right">View All</a>
-						<div class="title-page">
-							<p class="main-header">From the Blog</p>
-						    <p class="sub-header">Keep up with the latest happenings.</p>
-						</div>
-					</header>
-					<section class="block-body">
-						<div class="row">
-							<div class="col-sm-4 blog-post">
-								<img src="assets/images/bike_water1-1000x600.jpg">
-								<a href="#"><h2>Design Your Mind</h2></a>
-								<div class="date">3 Nov, 2014</div>
-								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="">Read More</a>
-							</div>
-							<div class="col-sm-4 blog-post">
-								<img src="assets/images/mac_glasses1-1000x600.jpg">
-								<a href="#"><h2>Winter Is Comming</h2></a>
-								<div class="date">3 Nov, 2014</div>
-								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="">Read More</a>
-							</div>
-							<div class="col-sm-4 blog-post">
-								<img src="assets/images/road-1000x600.jpg">
-								<a href="#"><h2>The Illustration</h2></a>
-								<div class="date">3 Nov, 2014</div>
-								<p>In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis, vulputate nunc nec, sodales nibh. Etiam nulla magna, gravida eget ultricies sit amet, hendrerit in lorem.</p>
-								<a href="">Read More</a>
-							</div>
-						</div>
-					</section>
-				</div>
-			</div><!-- #blog -->
+          <div class="col-lg-1">
 
+          </div>
+          <div class="col-lg-3">
+              <h2> 1. Evil Roy Slades </h2>
+              <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7926 Nicolls Avenue </h5>
+              <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Austin, TX 78730</h5>
+          </div>
 
-			<div class="content-block parallax" id="parallax">
-				<div class="container">
-					<h3 class="call-action pull-left">In at accumsan risus. Nam id volutpat ante. Etiam vel mi mattis.</h3>
-					<a href="#" class="pull-right btn btn-o-white btn-lg">Get a free quote</a>
-				</div>
-			</div><!-- #parallax -->
+          <div class="col-lg-4">
+              <h5>----</h5>
+          </div>
 
-			<div class="content-block" id="testimonials">
-				<div class="container testimonial-sec">
+          <div class="col-lg-3">
+            Status: Open | Happy Hour<br>
+            <a><span class="fa fa-clock-o"/>  Weekly Hours</a>
+          </div>
 
-					<header class="block-heading cleafix">
-						<div class="title-page  pull-left">
-							<p class="main-header">Testimonial</p>
-						    <p class="sub-header">What our client says</p>
-						</div>
-					</header>
+          <div class="col-lg-1">
+            <br>
+          </div>
+        </div>
+      </div>
+      <div class="content-block">
+        <div class="barListing">
+          <div class="col-lg-1">
 
-					<section class="block-body">
-						<div class="row">
-							<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-							  	<!-- Indicators -->
-							  	<ol class="carousel-indicators">
-								    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-								    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-								    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-							  	</ol><!-- /.carousel-indicators -->
+          </div>
+          <div class="col-lg-3">
+            <h2> 1. Evil Roy Slades </h2>
+            <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7926 Nicolls Avenue </h5>
+            <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Austin, TX 78730</h5>
+          </div>
 
+          <div class="col-lg-4">
+            <h5>-------</h5>
+          </div>
 
-							  	<!-- Wrapper for slides -->
-							  	<div class="carousel-inner" role="listbox">
-								    <div class="item active">
-								      	<div class="img-center">
-								      		<img class="img-circle circular-img" src="assets/images/01_200x200.png">
-								      	</div>
-								      	<h3>
-								      		Create a website that you are gonna be proud of. Be it Business, Portfolio, Photography, eCommerce & much more.
-								      	</h3>
+          <div class="col-lg-3">
+            Status: Open | Happy Hour<br>
+            <a><span class="fa fa-clock-o"/>  Weekly Hours</a>
+          </div>
 
-								    </div><!-- /.item -->
-								    <div class="item">
-								    	<div class="img-center">
-								      		<img class="img-circle circular-img" src="assets/images/02_200x200.png">
-								      	</div>
-								       	<h3>
-								       		Create a website that you are gonna be proud of. Be it Business, Portfolio, Photography, eCommerce & much more.
-								       	</h3>
-
-								    </div><!-- /.item -->
-								    <div class="item">
-								    	<div class="img-center">
-								      		<img class="img-circle circular-img" src="assets/images/03_200x200.png">
-								        </div>
-								       	<h3>
-								       		Create a website that you are gonna be proud of. Be it Business, Portfolio, Photography, eCommerce & much more.
-								       	</h3>
-								    </div><!-- /.item -->
-							  	</div><!-- /.carousel-inner -->
-							</div><!-- /.carousel slide -->
-						</div>
-					</section><!-- /.block-body -->
-				</div>
-			</div><!-- /#testimonials -->
+          <div class="col-lg-1">
+            <br>
+          </div>
+        </div>
+      </div>
 
 			<div class="content-block" id="footer">
 				<div class="container">
@@ -413,22 +252,15 @@
 
 		</div><!--/#wrapper-->
 
-
-
-
-		<script src="assets/js/jquery-2.1.3.min.js"></script>
-		<script src="assets/js/bootstrap.js"></script>
-		<script src="assets/js/jquery.actual.min.js"></script>
-		<script src="assets/js/jquery.scrollTo.min.js"></script>
 		<script src="assets/js/contact.js"></script>
 		<script src="assets/js/script.js"></script>
+    <script src="assets/js/indexJS.js"></script>
 		<script src="assets/js/smoothscroll.js"></script>
 		<script type="text/javascript">
+
 		jQuery(document).ready(function($){
 
 		  	$(window).scroll(function() {
-
-		  		console.log("asdf");
 
 				if ($(window).scrollTop() > 100 ){
 
@@ -440,7 +272,9 @@
 
 		 		};
 			});
-
+      $(document).ready(function() {
+        $('.js-example-basic-multiple').select2();
+      });
 		  });
 
 		jQuery('.scroll').on('click', function(e){
