--- a/public/index.html
+++ b/public/index.html
@@ -108,10 +108,6 @@
               <input type="submit" hidden="true">
             </form>
           </div>
-          <div ng-app="">
-            <p>Name : <input type="text" ng-model="name"></p>
-            <h1>Hello {{name}}</h1>
-          </div>
           <div class="col-lg-3">
           </div>
 				</section>
@@ -124,16 +120,16 @@
         </section>
         <br>
         <br>
-        <div class="barListing">
+        <div class="barListing" ng-app="myApp" ng-controller="myCtrl">
 
 
           <div class="col-lg-1">
 
           </div>
           <div class="col-lg-3">
-              <h2> 1. Evil Roy Slades </h2>
-              <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7926 Nicolls Avenue </h5>
-              <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Austin, TX 78730</h5>
+              <h2> {{id + 1}}. {{barName}} </h2>
+              <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{barStreet}} </h5>
+              <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{barCity}}, {{barState}} {{barZipCode}}</h5>
           </div>
 
           <div class="col-lg-4">
@@ -149,32 +145,10 @@
             <br>
           </div>
         </div>
-      </div>
-      <div class="content-block">
-        <div class="barListing">
-          <div class="col-lg-1">
 
-          </div>
-          <div class="col-lg-3">
-            <h2> 1. Evil Roy Slades </h2>
-            <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;7926 Nicolls Avenue </h5>
-            <h5> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Austin, TX 78730</h5>
-          </div>
-
-          <div class="col-lg-4">
-            <h5>-------</h5>
-          </div>
-
-          <div class="col-lg-3">
-            Status: Open | Happy Hour<br>
-            <a><span class="fa fa-clock-o"/>  Weekly Hours</a>
-          </div>
-
-          <div class="col-lg-1">
-            <br>
-          </div>
         </div>
       </div>
+
 
 			<div class="content-block" id="footer">
 				<div class="container">
@@ -255,6 +229,7 @@
 		<script src="assets/js/contact.js"></script>
 		<script src="assets/js/script.js"></script>
     <script src="assets/js/indexJS.js"></script>
+    <script src="assets/js/barList.js"></script>
 		<script src="assets/js/smoothscroll.js"></script>
 		<script type="text/javascript">
 
