--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <html class="noIE" lang="en-US">
 <!--<![endif]-->
 	<head>
-    <script src="lib/angular/angular.js"></script>
+    <script src="angular/angular.js"></script>
     <script src="assets/js/jquery-2.1.3.min.js"></script>
     <script src="assets/js/jquery.actual.min.js"></script>
     <script src="assets/js/jquery.scrollTo.min.js"></script>
