--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,10 +7,10 @@
 <!--<![endif]-->
 <head>
   <title>BarBeerDrinker Plus</title>
-  <script src="assets/js/jquery-2.1.3.min.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
-  <script src="assets/js/jquery.actual.min.js"></script>
-  <script src="assets/js/jquery.scrollTo.min.js"></script>
+  <script src="assets/lib/jquery-2.1.3.min.js"></script>
+  <script src="assets/lib/bootstrap.js"></script>
+  <script src="assets/lib/jquery.actual.min.js"></script>
+  <script src="assets/lib/jquery.scrollTo.min.js"></script>
   <!-- meta -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -31,11 +31,11 @@
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
   <script src="assets/js/html5shiv.js"></script>
-  <script src="assets/js/respond.js"></script>
+  <script src="assets/lib/respond.js"></script>
   <![endif]-->
 
   <!--[if IE 8]>
-  <script src="assets/js/selectivizr.js"></script>
+  <script src="assets/lib/selectivizr.js"></script>
   <![endif]-->
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
@@ -172,10 +172,10 @@
 
 
 
-<script src="assets/js/contact.js"></script>
-<script src="assets/js/script.js"></script>
+<script src="assets/lib/contact.js"></script>
+<script src="assets/lib/script.js"></script>
 <script src="assets/js/indexJS.js"></script>
-<script src="assets/js/smoothscroll.js"></script>
+<script src="assets/lib/smoothscroll.js"></script>
 <script type="text/javascript">
   jQuery(document).ready(function($){
 
