--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,19 @@
 <html class="noIE" lang="en-US">
 <!--<![endif]-->
 	<head>
+
+
+    <!-- Feathers API -->
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
+    <script src="https://unpkg.com/feathers-client@^2.0.0/dist/feathers.js"></script>
+
+
+
+
     <script src="angular/angular.js"></script>
-    <script src="assets/js/jquery-2.1.3.min.js"></script>
-    <script src="assets/js/jquery.actual.min.js"></script>
-    <script src="assets/js/jquery.scrollTo.min.js"></script>
+    <script src="assets/lib/jquery-2.1.3.min.js"></script>
+    <script src="assets/lib/jquery.actual.min.js"></script>
+    <script src="assets/lib/jquery.scrollTo.min.js"></script>
 
 		<title>BarBeerDrinker Plus</title>
 
@@ -32,13 +41,13 @@
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
-			<script src="assets/js/html5shiv.js"></script>
-			<script src="assets/js/respond.js"></script>
-		<![endif]-->
+    <script src="assets/js/html5shiv.js"></script>
+    <script src="assets/lib/respond.js"></script>
+    <![endif]-->
 
 		<!--[if IE 8]>
-	    	<script src="assets/js/selectivizr.js"></script>
-	    <![endif]-->
+    <script src="assets/lib/selectivizr.js"></script>
+    <![endif]-->
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
@@ -226,11 +235,11 @@
 
 		</div><!--/#wrapper-->
 
-		<script src="assets/js/contact.js"></script>
-		<script src="assets/js/script.js"></script>
+		<script src="assets/lib/contact.js"></script>
+		<script src="assets/lib/script.js"></script>
     <script src="assets/js/indexJS.js"></script>
     <script src="assets/js/barList.js"></script>
-		<script src="assets/js/smoothscroll.js"></script>
+		<script src="assets/lib/smoothscroll.js"></script>
 		<script type="text/javascript">
 
 		jQuery(document).ready(function($){
@@ -262,7 +271,6 @@
 
 
 		</script>
-
 
 	</body>
 </html>
