Index renamed and search works, its lit

--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
 
 		<script src="assets/lib/contact.js"></script>
 		<script src="assets/lib/script.js"></script>
-    <script src="assets/js/indexJS.js"></script>
+    <script src="assets/js/index.js"></script>
     <script src="assets/js/barList.js"></script>
 		<script src="assets/lib/smoothscroll.js"></script>
 		<script type="text/javascript">
