--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -188,7 +188,7 @@
 
 <script src="assets/lib/contact.js"></script>
 <script src="assets/lib/script.js"></script>
-<script src="assets/js/indexJS.js"></script>
+<script src="assets/js/index.js"></script>
 <script src="assets/lib/smoothscroll.js"></script>
 <script src="assets/js/barList.js"></script>
 <script type="text/javascript">
