more UI updates

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,13 @@
             </div>
 
             <div class="col-lg-4">
-              <h5>----</h5>
+              <h4>Attire: {{x.attire}} | Capacity: {{x.capacity}}</h4>
+              <h4>Typical Crowd: {{x.typicalCrowd}}</h4>
+              <i class="fa fa-credit-card" aria-hidden="true"></i>
+              <i class="fa fa-users" aria-hidden="true"></i>
+              <i class="fa fa-wifi" aria-hidden="true"></i>
+              <img width="16" height=16" src="assets/images/no-smoking.svg">
+              <img width="16" height=16" src="assets/images/smoking.svg">
             </div>
 
             <div class="col-lg-3">
