--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,6 +16,8 @@
   <script src="assets/lib/jquery.actual.min.js"></script>
   <script src="assets/lib/jquery.scrollTo.min.js"></script>
 
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+
 
   <title>BarBeerDrinker Plus</title>
 
@@ -55,7 +57,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 </head>
 
-<body>
+<body  ng-app="myApp">
 <header class="top-header">
   <div class="container">
     <div class="row">
@@ -108,77 +110,18 @@
   <div id="header" class="content-block">
     <section class="center">
       <h1 style="color:white;">Welcome to your Dashboard, please select your bar</h1>
-      <select class="allBars" name="bars[]" value="Select a Bar" ng-app="myApp" ng-controller="managerBarList" style="width:35%">
-        <optgroup label="Pick your bar!">
-          <option ng-repeat="x in barList" value="{{x.id}}">{{x.name}}</option>
-        </optgroup>
-      </select>
+      <div id="managerBarList">
+        <select class="allBars" name="bars[]" value="Select a Bar" ng-controller="managerBarList" style="width:35%">
+          <optgroup label="Pick your bar!">
+            <option ng-repeat="x in barList" value="{{x.id}}" >{{x.name}}</option>
+          </optgroup>
+        </select>
+      </div>
     </section>
   </div>
-<div class="content-block">
-  <svg width="960" height="960" font-family="sans-serif" font-size="10" text-anchor="middle"></svg>
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script>
+<div class="content-block" ng-controller="managerGraphs">
+  <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
 
-    var svg = d3.select("svg"),
-      width = +svg.attr("width"),
-      height = +svg.attr("height");
-
-    var format = d3.format(",d");
-
-    var color = d3.scaleOrdinal(d3.schemeCategory20c);
-
-    var pack = d3.pack()
-      .size([width, height])
-      .padding(1.5);
-
-    d3.csv("flare.csv", function(d) {
-      d.value = +d.value;
-      if (d.value) return d;
-    }, function(error, classes) {
-      if (error) throw error;
-
-      var root = d3.hierarchy({children: classes})
-        .sum(function(d) { return d.value; })
-        .each(function(d) {
-          if (id = d.data.id) {
-            var id, i = id.lastIndexOf(".");
-            d.id = id;
-            d.package = id.slice(0, i);
-            d.class = id.slice(i + 1);
-          }
-        });
-
-      var node = svg.selectAll(".node")
-        .data(pack(root).leaves())
-        .enter().append("g")
-        .attr("class", "node")
-        .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
-
-      node.append("circle")
-        .attr("id", function(d) { return d.id; })
-        .attr("r", function(d) { return d.r; })
-        .style("fill", function(d) { return color(d.package); });
-
-      node.append("clipPath")
-        .attr("id", function(d) { return "clip-" + d.id; })
-        .append("use")
-        .attr("xlink:href", function(d) { return "#" + d.id; });
-
-      node.append("text")
-        .attr("clip-path", function(d) { return "url(#clip-" + d.id + ")"; })
-        .selectAll("tspan")
-        .data(function(d) { return d.class.split(/(?=[A-Z][^A-Z])/g); })
-        .enter().append("tspan")
-        .attr("x", 0)
-        .attr("y", function(d, i, nodes) { return 13 + (i - nodes.length / 2 - 0.5) * 10; })
-        .text(function(d) { return d; });
-
-      node.append("title")
-        .text(function(d) { return d.id + "\n" + format(d.value); });
-    });
-
-  </script>
 </div>
 </div><!--/#wrapper-->
 
@@ -191,6 +134,7 @@
 <script src="assets/js/index.js"></script>
 <script src="assets/lib/smoothscroll.js"></script>
 <script src="assets/js/barList.js"></script>
+<script src="assets/js/dashboard.js"></script>
 <script type="text/javascript">
   jQuery(document).ready(function($){
 
