--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,11 @@
     <script src="https://unpkg.com/feathers-client@^2.0.0/dist/feathers.js"></script>
 
     <script src="angular/angular.js"></script>
+
     <script src="assets/lib/jquery-2.1.3.min.js"></script>
     <script src="assets/lib/jquery.actual.min.js"></script>
     <script src="assets/lib/jquery.scrollTo.min.js"></script>
+    <script src="assets/lib/bootstrap.js"></script>
 
 		<title>BarBeerDrinker Plus</title>
 
@@ -122,114 +124,74 @@
         <p align="center"> Showing {{searchInitiated.totalResults}} result(s) </p>
         </section>
       </div>
-      <div class="content-block" id="searchResults" ng-repeat="x in barList" >
+      <div class="content-block" id="searchResults" ng-repeat="x in barList"  >
         <!--<section class="center">-->
           <!--<h3 align="center"> Here's what we found!</h3>-->
           <!--<p align="center">Showing 1-2 of 69 results</p>-->
         <!--</section>-->
         <div class="barListing" >
-            <div class="col-lg-1">
-
-            </div>
+            <div class="col-lg-1">{{x.averageRating}}</div>
             <div class="col-lg-3" >
               <h2> {{x.name}} </h2>
               <h4 class="barStreet"> {{x.street}} </h4>
               <h4 class="barCityState"> {{x.city}}, {{x.state}} {{x.zipcode}}</h4>
             </div>
-
             <div class="col-lg-4">
               <h4>Attire: {{x.attire}} | Capacity: {{x.capacity}}</h4>
               <h4>Typical Crowd: {{x.typicalCrowd}}</h4>
-              <i class="fa fa-credit-card" aria-hidden="true"></i>
-              <i class="fa fa-users" aria-hidden="true"></i>
-              <i class="fa fa-wifi" aria-hidden="true"></i>
-              <img width="16" height=16" src="assets/images/no-smoking.svg">
-              <img width="16" height=16" src="assets/images/smoking.svg">
+              <a class="toolTipTest" data-toggle="tooltip" title="Accepts Credit Card!"><i rel="popover" class="fa fa-credit-card fa-fw fa-lg" ng-if="x.acceptsCredit == 1" ></i></a>
+              <i rel="popover" class="fa fa-users fa-fw fa-lg" ng-if="x.isGoodForGroups == 1" data-toggle="tooltip" title="Good For Groups!"></i>
+              <i rel="popover" class="fa fa-wifi fa-fw fa-lg" ng-if="x.hasWifi == 1" data-toggle="tooltip" title="WiFi Access!"></i>
+              <img rel="popover" width="16" height="24" src="assets/images/no-smoking.svg" ng-if="x.allowsSmoking == 0" data-toggle="tooltip" title="No Smoking!">
+              <img rel="popover"width="16" height="24" src="assets/images/smoking.svg" ng-if="x.allowsSmoking == 1" data-toggle="tooltip" title="Smoking Allowed!">
+              <h4 ng-click="menuClick(x.id)" class="modalMenu" data-toggle="modal" data-target="#myModal" id="{{x.id}}">Menu</h4>
             </div>
-
             <div class="col-lg-3">
               Status: Open | Happy Hour<br>
-              <a><span class="fa fa-clock-o"/>  Weekly Hours</a>
+              <a><span class="fa fa-clock-o"></span>  Weekly Hours</a>
             </div>
 
             <div class="col-lg-1">
               <br>
             </div>
-          <div style="width: 81%; height: 3px; background: #2b3e51; overflow: hidden; margin: -20px auto" ></div>
+          <div style="width: 81%; height: 3px; background: #2b3e51; overflow: hidden; margin: -20px auto" ng-if="x.lastBar != 1" ></div>
           </div>
+
+
       </div>
+      <!-- Modal  -->
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
 
+          <!-- Modal content -->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title module-title" style="margin: auto">{{barName}}</h4>
+            </div>
+            <div class="modal-body">
+              <div id="modalMenuHeight">
+              <div ng-repeat="drink in sellsList">
+                <div class="menu">
+                  <div class="row">
+                    <div class="col-sm-8">
+                      <h4 class="menu-title">{{drink.drinkName}}</h4>
+                      <div class="menu-detail">Special Happy Hour Price: {{drink.happyHourPrice}}</div>
+                    </div>
+                    <div class="col-sm-4 menu-price-detail">
+                      <h4 class="menu-price">{{drink.price}}</h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
 
-			<div class="content-block" id="footer">
-				<div class="container">
-					<div class="row">
-							<div class="col-sm-4 blog-post">
-
-								<h2 class="footer-block">Have a question</h2>
-								<p>Praesent lacinia dapibus, accumsan vesti bulum. Pellen tesque molestie mollis.</p>
-
-								<p>Mauris nec ligula dui, fermentum nisl ut magna dolor, rhoncus wisi. In lacus sagittis luctus, nisl eros, sit amet tempor et, accumsan eget, pede. Suspendisse est. Ut rhoncus eu, pede. Vestibulum ante ipsum dolor lorem, iaculis mi. Pellentesque eu urna eget dolor. Duis luctus a, dolor. Duis ac sapien.
-								</p>
-
-								<p>Estibulum dapibus, maurimalesfames ac turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam erat ac ipsum. Integer aliquam purus ultricies gravida vitae...</p>
-							</div>
-							<div class="col-sm-4 blog-post">
-								<h2 class="footer-block">Leave us a message</h2>
-								<form action="contact-form.php" id="contactForm" method="post" name="contactform" class="" role="form">
-									<div class="form-group">
-								    	<input type="text" class="form-control form-control-white" id="name" name="name" placeholder="Your Name" required>
-								  	</div>
-								    <div class="form-group">
-								    	<input type="email" class="form-control form-control-white" id="email" name="email" placeholder="Enter email" required>
-								    </div>
-								    <div class="form-group">
-								    	<textarea class="form-control form-control-white" id="message" name="massage" placeholder="Write Something" required></textarea>
-								    </div>
-								    <div id="contactFormResponse"></div>
-								    <div class="form-group">
-								    	<input id="cfsubmit" type="submit" class="text-center btn btn-o-white" value="Say Hello">
-								  	</div>
-								</form>
-							</div>
-							<div class="col-sm-4 blog-post">
-
-								<h2 class="footer-block">Contact Details</h2>
-								<ul>
-									<li class="address-sub"><i class="fa fa-map-marker"></i>Office Address</li>
-										<p>
-											Blabla Parkway, P.o Box 353 Mountain View. United States of America.
-										</p>
-									<li class="address-sub"><i class="fa fa-phone"></i>Phone</li>
-										<p>
-											Local: 1-800-123-hello<br>
-											Mobile: 1-800-123-hello
-										</p>
-									<li class="address-sub"><i class="fa fa-envelope-o"></i>Email Address</li>
-										<p>
-											<a href="mailto:info@themewagon.com">info@themewagon.com</a><br>
-											<a href="http://www.themewagon.com/">www.themewagon.com</a>
-										</p>
-								</ul>
-								<div class="social">
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-instagram"></i></a>
-									<a href="#"><i class="fa fa-pinterest-p"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-skype"></i></a>
-								</div>
-							</div>
-						</div>
-				</div>
-			</div>
-			<div class="content-block footer-bottom" id="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-6">&copy; Copyright Nevada Plus 2015</div>
-						<div class="col-xs-6 text-right">Theme by <a href="http://www.themewagon.com/" target="_blink">ThemeWagon</a></div>
-					</div>
-				</div>
-			</div><!-- #footer -->
+        </div>
+      </div>
 		</div><!--/#wrapper-->
 
     <!-- Load libraries first -->
