--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -26,6 +26,8 @@
   <script src="assets/lib/jquery.actual.min.js"></script>
   <script src="assets/lib/jquery.scrollTo.min.js"></script>
 
+  <script src="https://unpkg.com/ng-table@2.0.2/bundles/ng-table.min.js"></script>
+
   <!-- meta -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -43,6 +45,7 @@
   <link rel="stylesheet" href="assets/css/customCSS.css">
   <link rel="stylesheet" href="assets/css/style.css" media="screen"/>
 
+  <link rel="stylesheet" href="assets/css/ng-table.min.css">
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
@@ -58,7 +61,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 </head>
 
-<body  ng-app="myApp">
+<body  ng-app="myApp2">
 <header class="top-header">
   <div class="container">
     <div class="row">
@@ -122,6 +125,36 @@
   </div>
   <div class="content-block" ng-controller="managerGraphs">
     <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
+<div class="content-block">
+  <div class="col-lg-6">
+    <h2 style="text-align:center;">Ratings Table</h2>
+    <table ng-table="ratingsTable" class="ratingsTable">
+      <tr ng-repeat="r in data">
+        <td data-title="'Drinker'" sortable="'drinkerId'" filter="{ 'drinkerName': 'text' }" style="width:50%">
+          {{r.drinkerName}} - {{r.drinkerId}}
+        </td>
+        <td data-title="'Rating'" sortable="'rating'" style="width:20%" filter="{ 'rating': 'number' }">
+          {{r.rating}}
+        </td>
+        <td data-title="'Date Time'" sortable="'ratingDay'" filter="{ 'ratingDay': 'text' }" style="width:30%">
+          {{r.ratingDay}}
+        </td>
+      </tr>
+    </table>
+  </div>
+  <style>
+
+  </style>
+  <div class="col-lg-3">
+
+  </div>
+  <div class="col-lg-3">
+
+  </div>
+
+</div>
+
+
   </div>
 
 </div><!--/#wrapper-->
