--- a/public/index.html
+++ b/public/index.html
@@ -126,7 +126,7 @@
         <div style="width: 81%; height: 3px; background: #2b3e51; overflow: hidden; margin: -20px auto" ng-repeat="j in searchInitiated" ></div>
       </div>
       <div class="content-block" style="text-align:center;" ng-if="isLoading == 1">
-        <h4>Our personal chimpanzees are finding your results!</h4>
+        <h4>Our Databases336 students are preparing your results!</h4>
         <i class="fa fa-glass fa-pulse fa-5x" aria-hidden="true" ></i>
       </div>
       <div id="searchResultsDiv" ng-if="isLoading == 0">
