--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<!--[if IE 7 ]><html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
-<!--[if IE 8]><html class="ie ie8 lte9 lte8" lang="en-US">	<![endif]-->
-<!--[if IE 9]><html class="ie ie9 lte9" lang="en-US"><![endif]-->
+<!--[if IE 7 ]>
+<html class="ie ie7 lte9 lte8 lte7" lang="en-US"><![endif]-->
+<!--[if IE 8]>
+<html class="ie ie8 lte9 lte8" lang="en-US">  <![endif]-->
+<!--[if IE 9]>
+<html class="ie ie9 lte9" lang="en-US"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
 <html class="noIE" lang="en-US">
 <!--<![endif]-->
@@ -57,11 +60,11 @@
   <script src="assets/lib/selectivizr.js"></script>
   <![endif]-->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/css/select2.min.css" rel="stylesheet"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.4/js/select2.min.js"></script>
 </head>
 
-<body  ng-app="myApp2">
+<body ng-app="myApp2" class="whiteBg">
 <header class="top-header">
   <div class="container">
     <div class="row">
@@ -77,7 +80,8 @@
           <div class="container-fluid nav-bar">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                      data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -117,7 +121,7 @@
       <div id="managerBarList">
         <select class="allBars" name="bars[]" value="Select a Bar" ng-controller="managerBarList" style="width:35%">
           <optgroup label="Pick your bar!">
-            <option ng-repeat="x in barList" value="{{x.id}}" >{{x.name}}</option>
+            <option ng-repeat="x in barList" value="{{x.id}}">{{x.name}}</option>
           </optgroup>
         </select>
       </div>
@@ -125,44 +129,45 @@
   </div>
   <div class="content-block" ng-controller="managerGraphs">
     <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
-<div class="content-block">
-  <div class="col-lg-6">
-    <h2 style="text-align:center;">Ratings Table</h2>
-    <table ng-table="ratingsTable" class="ratingsTable">
-      <tr ng-repeat="r in data">
-        <td data-title="'Drinker'" sortable="'drinkerId'" filter="{ 'drinkerName': 'text' }" style="width:50%">
-          {{r.drinkerName}} - {{r.drinkerId}}
-        </td>
-        <td data-title="'Rating'" sortable="'rating'" style="width:20%" filter="{ 'rating': 'number' }">
-          {{r.rating}}
-        </td>
-        <td data-title="'Date Time'" sortable="'ratingDay'" filter="{ 'ratingDay': 'text' }" style="width:30%">
-          {{r.ratingDay}}
-        </td>
-      </tr>
-    </table>
-  </div>
-  <div class="col-lg-3">
+    <div id="checkinDiv"></div>
+    <div class="content-block">
+      <div class="col-lg-6">
+        <h2 style="text-align:center;">Ratings Table</h2>
+        <table ng-table="ratingsTable" class="ratingsTable">
+          <tr ng-repeat="r in data">
+            <td data-title="'Drinker'" sortable="'drinkerId'" filter="{ 'drinkerName': 'text' }" style="width:50%">
+              {{r.drinkerName}} - {{r.drinkerId}}
+            </td>
+            <td data-title="'Rating'" sortable="'rating'" style="width:20%" filter="{ 'rating': 'number' }">
+              {{r.rating}}
+            </td>
+            <td data-title="'Date Time'" sortable="'ratingDay'" filter="{ 'ratingDay': 'text' }" style="width:30%">
+              {{r.ratingDay}}
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-lg-3">
 
-  </div>
-  <div class="col-lg-3">
+      </div>
+      <div class="col-lg-3">
 
-  </div>
+      </div>
 
-</div>
+    </div>
     <div class="content-block">
       <div class="col-lg-3"></div>
       <div class="col-lg-6">
         <h2 style="text-align:center;">Frequents Table</h2>
         <table ng-table="frequentsTable" class="frequentsTable">
           <tr ng-repeat="r in data1">
-            <td data-title="'Name'" sortable="'name'" filter="{ 'name': 'text' }" >
+            <td data-title="'Name'" sortable="'name'" filter="{ 'name': 'text' }">
               {{r.name}}
             </td>
             <td data-title="'Age'" sortable="'age'" filter="{ 'age': 'text' }">
               {{r.age}}
             </td>
-            <td data-title="'Gender'" sortable="'gender'" filter="{ 'gender': 'text' }" >
+            <td data-title="'Gender'" sortable="'gender'" filter="{ 'gender': 'text' }">
               <div ng-if="r.gender == 1">
                 Male
               </div>
@@ -170,7 +175,7 @@
                 Female
               </div>
             </td>
-            <td data-title="'State'" sortable="'state'" filter="{ 'state': 'text' }" >
+            <td data-title="'State'" sortable="'state'" filter="{ 'state': 'text' }">
               {{r.state}}
             </td>
             <td data-title="'City'" sortable="'city'" filter="{ 'city': 'text' }">
@@ -195,19 +200,20 @@
 <script src="assets/js/barList.js"></script>
 <script src="assets/js/dashboard.js"></script>
 <script type="text/javascript">
-  jQuery(document).ready(function($){
-    $(window).scroll(function() {
-      if ($(window).scrollTop() > 100 ){
+  jQuery(document).ready(function ($) {
+    $(window).scroll(function () {
+      if ($(window).scrollTop() > 100) {
         $('.top-header').addClass('shows');
       } else {
         $('.top-header').removeClass('shows');
-      };
+      }
+      ;
     });
   });
-  jQuery('.scroll').on('click', function(e){
+  jQuery('.scroll').on('click', function (e) {
     e.preventDefault()
     jQuery('html, body').animate({
-      scrollTop : jQuery(this.hash).offset().top
+      scrollTop: jQuery(this.hash).offset().top
     }, 1500);
   });
 </script>
