--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 	<head>
     <!-- Feathers API -->
-    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
     <script src="https://unpkg.com/feathers-client@^2.0.0/dist/feathers.js"></script>
 
     <script src="angular/angular.js"></script>
@@ -25,10 +25,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 
 		<!-- google fonts -->
-		<link href='http://fonts.googleapis.com/css?family=Raleway:500,300' rel='stylesheet' type='text/css'>
-		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans'>
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,bold"/>
+		<link href='https://fonts.googleapis.com/css?family=Raleway:500,300' rel='stylesheet' type='text/css'>
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=PT+Sans'>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:regular,bold"/>
 
 		<!-- css -->
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -234,7 +234,7 @@
                 <li class="address-sub"><i class="fa fa-envelope-o"></i>Email Address</li>
                 <p>
                   <a href="mailto:info@themewagon.com">info@themewagon.com</a><br>
-                  <a href="http://www.themewagon.com/">www.themewagon.com</a>
+                  <a href="https://www.themewagon.com/">www.themewagon.com</a>
                 </p>
               </ul>
               <div class="social">
@@ -253,7 +253,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-6">&copy; Copyright Nevada Plus 2015</div>
-            <div class="col-xs-6 text-right">Theme by <a href="http://www.themewagon.com/" target="_blink">ThemeWagon</a></div>
+            <div class="col-xs-6 text-right">Theme by <a href="https://www.themewagon.com/" target="_blink">ThemeWagon</a></div>
           </div>
         </div>
       </div>
