--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,7 +11,7 @@
 <head>
 
   <!-- Feathers API -->
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.1.4/core.min.js"></script>
   <script src="https://unpkg.com/feathers-client@^2.0.0/dist/feathers.js"></script>
 
   <script src="angular/angular.js"></script>
@@ -37,10 +37,10 @@
   <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 
   <!-- google fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Raleway:500,300' rel='stylesheet' type='text/css'>
-  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=PT+Sans'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Serif:regular,bold"/>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:500,300' rel='stylesheet' type='text/css'>
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=PT+Sans'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Droid+Serif:regular,bold"/>
 
   <!-- css -->
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
