--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -159,7 +159,7 @@
       <div class="col-lg-3"></div>
       <div class="col-lg-6">
         <h2 style="text-align:center;">Frequents Table</h2>
-        <table ng-table="frequentsTable" class="frequentsTable">
+        <table ng-table="frequentsTable" class="frequentsTable row-border hover">
           <tr ng-repeat="r in data1">
             <td data-title="'Name'" sortable="'name'" filter="{ 'name': 'text' }">
               {{r.name}}
