--- a/public/index.html
+++ b/public/index.html
@@ -175,8 +175,25 @@
               <h4 ng-click="menuClick(x.id)" class="modalMenu" data-toggle="modal" data-target="#myModal" id="{{x.id}}">Menu</h4>
             </div>
             <div class="col-lg-3">
-              Status: Open | Happy Hour<br>
-              <a><span class="fa fa-clock-o"></span>  Weekly Hours</a>
+              <div>
+                <p style="float:left;">Status: </p>
+                <p ng-if="x.isOpen == 1" style="color: green;float:left;">Open </p>
+                <p ng-if="x.isOpen == 0" style="color: red;float:left;">Closed </p>
+                <p ng-if="x.isHappyHour == 1" style="float:left;">|</p>
+                <p ng-if="x.isHappyHour == 1" style="color:green;float:left;">Happy Hour</p>
+                <br>
+              </div>
+              <br>
+              <div style="float:left;margin-top:-15px;"><i class="fa fa-clock-o"></i> Open - Close</div>
+              <br>
+              <div style="flaot:left;margin-top:-15px;">
+                {{x.openTime}} - {{x.closeTime}}<br>
+                <br>
+                HAPPY HOUR:<br>
+                Days: {{x.daysList}}
+                <br>
+                Times: {{x.startTime}} - {{x.endTime}}
+              </div>
             </div>
 
             <div class="col-lg-1">
@@ -186,7 +203,7 @@
           </div>
         </div>
       </div>
-
+      <span id="decodeIt" style="display:none;"></span>
       <div class="content-block" id="footer">
         <div class="container">
           <div class="row">
